# UTN-INSPT

backend/: .gitignore  Dockerfile  docker-compose.yml  run.py
backend/docker/: docker-compose.yml
backend/wheater_station/: Dockerfile  pyproject.toml  requirements.txt  test.py
backend/wheater_station/apis/: v1_application_apis.py  v1_sockets.py
backend/wheater_station/core/db/: charts.py  create_schemas.py
backend/wheater_station/core/tools/: geolocalization.py
backend/wheater_station/core/uart/: uart.py
backend/wheater_station/docs/: ER diagram.drawio
backend/wheater_station/wheater_station/: .env  main.py  settings.py
backend/wheater_station/wheater_station/apis/: v1_application_apis.py  v1_schemas.py  v1_sockets.py
backend/wheater_station/wheater_station/core/db/: charts.py  db_connect.py
backend/wheater_station/wheater_station/core/sensors/: sensor_base.py  temperature_sensor.py
backend/wheater_station/wheater_station/core/tools/docker_startup/: startup.py
backend/wheater_station/wheater_station/core/uart/: uart.py
docs/: hardware_diagram.drawio
firmware/: Adquisicion2.rar  Conexion UART.rar
firmware/.metadata/: .log4j.xml  version.ini
firmware/ADC-UAR/: .cproject  .mxproject  .project  Adquisicion Debug.launch  Adquisicion.ioc
firmware/ADC-UAR/Debug/: Adquisicion.elf  Adquisicion.list  Adquisicion.map  makefile
firmware/ADC_UAR V1.1 (Core Update)/Src/: main.c  (+1 more)
firmware/ConversorADC/: .cproject  .mxproject  .project  ConversorADC Debug.launch  ConversorADC.ioc
frontend/wheater_station/: package-lock.json  package.json
(+127 files in other folders)
