[tool.poetry]
name = "wheater-station"
version = "0.1.2"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
serial = "^0.0.97"
psycopg2-binary = "^2.9.7"
python-multipart = "^0.0.6"
argparse = "^1.4.0"
sqlalchemy = "^2.0.21"
websockets = "^11.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
